Completd Week 04's Assignment
