# server.js
@@ -1,21 +1,67 @@
 const express = require('express');
-const mongodb = require('./db/connect');
 const bodyParser = require('body-parser');
-const error = require('./middleware/error');
+const dotenv = require("dotenv").config();
+const mongodb = require('./db/connect');
+const passport = require('passport');
+const session = require('express-session');
+const GitHubStrategy = require('passport-github2').Strategy;
+const cors = require('cors');
 
 const port = process.env.PORT || 3000;
 const app = express();
 
 app
     .use(bodyParser.json())
+    .use(session({
+        secret: process.env.SESSION_SECRET || '9258da7e79295d2c76d0b3237af30aab',
+        resave: false,
+        saveUninitialized: true
+    }))
+    .use(passport.initialize())
+    .use(passport.session())
     .use((req, res, next) => {
         res.setHeader('Access-Control-Allow-Origin', '*');
+        res.setHeader(
+            "Access-Control-Allow-Headers",
+            "Origin, X-Requested-With, Content-Type, Accept, Z-Key, Authorization"
+        );
+        res.setHeader(
+            "Access-Control-Allow-Methods",
+            "POST, GET, PUT, PATCH, OPTIONS, DELETE"
+        );
         next();
     })
+    .use(cors({ methods: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATCH'] }))
+    .use(cors({ origin: '*'}))
     .use('/', require('./routes'));
 
-// Catch 500 errors
-app.use(error);
+    passport.use(new GitHubStrategy({
+        clientID: process.env.GITHUB_CLIENT_ID,
+        clientSecret: process.env.GITHUB_CLIENT_SECRET,
+        callbackURL: process.env.CALLBACK_URL
+    },
+    function (accessToken, refreshToken, profile, done) {
+        //User.findOrCreate({ githubId: profile.id }, function(err, user) {
+            return done(null, profile);
+        //});
+    }
+));
+
+passport.serializeUser((user, done) => {
+    done(null, user);
+});
+passport.deserializeUser((user, done) => {
+    done(null, user);
+});
+
+app.get('/', (req, res) => { res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : "Logged Out") });
+
+app.get('/github/callback', passport.authenticate('github', {
+    failureRedirect: '/api-docs', session: false
+}), (req, res) => {
+    req.session.user = req.user;
+    res.redirect('/');
+});
 
 mongodb.initDb((err) => {
     if (err) {
