# swagger.json
@@ -5,7 +5,7 @@
     "description": "Customers and Products API",
     "version": "1.0.0"
   },
-  "host": "cse341-project2-4d43.onrender.com",
+  "host": "cse341--project2-4d43.onrender.com",
   "basePath": "/",
   "schemes": [
     "https"
@@ -20,16 +20,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          }
-        }
-      }
-    },
-    "/api-docs": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
           }
         }
       }
